# askTony

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: scoring.md
openspec/changes/archive/2026-01-31-analyze-active-members/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-analyze-active-members/specs/analyze-active-members/: spec.md
openspec/changes/archive/2026-01-31-analyze-inactive-members/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-analyze-inactive-members/specs/analyze-inactive-members/: spec.md
openspec/changes/archive/2026-01-31-analyze-missing-fullname-authors/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-01-analyze-project-activity/: design.md  proposal.md  tasks.md
openspec/specs/01 init project/: sepc.md
openspec/specs/02 incremental etl/: spec.md
openspec/specs/03 dim ingestion/: spec.md
openspec/specs/04 plot report/: spec.md
openspec/specs/05 quick start/: spec.md
openspec/specs/06 model-project-facts/: spec.md
openspec/specs/07 import-project-info/: spec.md
openspec/specs/08 analyze-project-activity/: spec.md
openspec/specs/09 analyze-missing-fullname-authors/: spec.md
openspec/specs/10 analyze-inactive-members/: spec.md
openspec/specs/11 analyze-active-members/: spec.md
src/asktony/: __main__.py  cli.py  cnb_client.py  config.py  db.py  dim_admin.py  lake.py  project_admin.py  project_templates.py  render.py  visualize.py  warehouse.py
src/asktony/commands/: analyze.py  config.py  critic.py  ingest.py  model.py  universe.py  visualize.py
(+4 files in other folders)
