[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "AskTony"
version = "0.1.0"
description = "AskTony - CNB analytics CLI powered by DuckDB + DuckLake"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "AskTony" }]
dependencies = [
  "duckdb>=1.1.0",
  "httpx>=0.27.0",
  "matplotlib>=3.9.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.0",
  "pypinyin>=0.50.0",
  "pillow>=10.4.0",
  "rich>=13.8.0",
  "seaborn>=0.13.0",
  "typer>=0.12.5",
]

[project.scripts]
asktony = "asktony.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/asktony"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
